@@ -23,9 +23,9 @@ from DateTime import DateTime
 from Products.CMFCore.PortalFolder import PortalFolder
 from AccessControl import ClassSecurityInfo
 from AccessControl.Permissions import manage_users as ManageUsers
-from Products.CMFCore.CMFCorePermissions import setDefaultRoles
-from Products.CMFCore.CMFCorePermissions import View
-from Products.CMFCore.CMFCorePermissions import AddPortalContent
+from Products.CMFCore.permissions import setDefaultRoles
+from Products.CMFCore.permissions import View
+from Products.CMFCore.permissions import AddPortalContent
 from Products.CMFCore.utils import UniqueObject, getToolByName
 from Products.CMFCore.utils import _getAuthenticatedUser, _checkPermission
 from Products.CMFCore.ActionProviderBase import ActionProviderBase
