@@ -31,7 +31,7 @@ from Acquisition import aq_parent, aq_inner, aq_base
 from Globals import InitializeClass
 from AccessControl import ClassSecurityInfo
 
-from Products.CMFCore.CMFCorePermissions import View, ModifyPortalContent
+from Products.CMFCore.permissions import View, ModifyPortalContent
 from Products.CMFCore.utils import getToolByName
 
 from Products.CPSCore.CPSBase import CPSBaseDocument
